--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
 	<script src="/build/js/libs.js"></script>
 	<script src="/build/js/tags.js"></script>
 	<script src="/build/js/bundle.js"></script>
+	<script>
+		//mount only after everything is defined
+		riot.mount("*");
+	</script>
 	<script src="//localhost:36001/livereload.js"></script>
 </body>
 </html>
